--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -91,7 +91,7 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal wurde das
 %
 %
 \subsubsection*{Meilensteine}
-	Jede Phase\footnote{siehe \vpageref{sss:arbeitsphasen} Arbeitsphasen} wird durch einen Meilenstein abgeschlossen. Die Erfüllung eines Meilensteins ist Voraussetzung für das Voranschreiten in die nächste Projektphase.
+	Jede Phase wird durch einen Meilenstein abgeschlossen. Die Erfüllung eines Meilensteins ist Voraussetzung für das Voranschreiten in die nächste Projektphase.
 	\begin{description}
 		\item[Wichtigste Methode evaluiert] Die Literaturstudie hat zum Ziel einen funktionierenden Ansatz für die spätere Konzeptentwicklung zu evaluieren. Dies muss am \textbf{04.06.2014} abgeschlossen werden.
 		%
@@ -123,7 +123,7 @@ Der Zeitplan konnte nicht eingehalten werden. Auf Abweichungen wird im Abschnitt
 	Da kein Pflichtenheft zu diesem Projekt existiert, wird folgend die Anforderungen an das Messprinzip definiert und erklärt.\par
 	%
 	\subsection{Messbereich}\label{ss:messbereich}
-		Ein Knie hat nur, gegeben durch das Kreuzband\footnote{für detaillierte Erläuterungen sei auf den Abschnitt \vref{s:funktion_kreuzband} verwiesen}, einen beschränkten Bewegungsfreiraum. Diese Einschränkung erlaubt es den geforderten Messbereich zu beschränken und dadurch das Konzept stark zu vereinfachen. Als Ausgangslage für die Auslegung des nötigen Bereichs dienen Messungen\footnote{Die Messungen wurden mit Hilfe eines Massstabs durchgeführt und haben keinen Anspruch auf hohe Genauigkeit} an einem realen Knie. Daraus ergeben sich folgende Fakten:
+		Ein Knie hat nur, gegeben durch das Kreuzband\footnote{für detaillierte Erläuterungen sei auf den Abschnitt \vref{s:funktion_kreuzband} verwiesen.}, einen beschränkten Bewegungsfreiraum. Diese Einschränkung erlaubt es den geforderten Messbereich zu beschränken und dadurch das Konzept stark zu vereinfachen. Als Ausgangslage für die Auslegung des nötigen Bereichs dienen Messungen\footnote{Die Messungen wurden mit Hilfe eines Massstabs durchgeführt und haben keinen Anspruch auf hohe Genauigkeit.} an einem realen Knie. Daraus ergeben sich folgende Fakten:
 		\begin{itemize}
 			\item Horizontale Auslenkungen y von $\pm$\unit[2.5]{cm}
 			\item Eine Auslenkung in x-Richtung von \unit[5]{mm}
@@ -133,7 +133,7 @@ Der Zeitplan konnte nicht eingehalten werden. Auf Abweichungen wird im Abschnitt
 		\image{content/3_konzept/image/knie_bewegung}{scale=0.6}{htbp}[Auslenkung Knie][img:knie_auslenkung]
 	%
 	\subsection{Messgenauigkeit}\label{ss:messgenauigkeit}
-		Die Beurteilung des Zustandes der Knieverletzung erfolgt binär. Entweder das Knie ist geheilt und der Sportler kann das Training aufnehmen oder die Genesung ist noch nicht abgeschlossen. Daher muss die Genauigkeit lediglich ausreichen um eine Extraktion dieser beiden Fälle zu ermöglichen. Die Genauigkeit wird auf Grund dieser Fakten auf $\pm$ \unit[1]{cm} festgelegt\footnote{Dieser Wert ist eine Annahme und müsste durch eine Fachperson bestätigt werden}.
+		Die Beurteilung des Zustandes der Knieverletzung erfolgt binär. Entweder das Knie ist geheilt und der Sportler kann das Training aufnehmen oder die Genesung ist noch nicht abgeschlossen. Daher muss die Genauigkeit lediglich ausreichen um eine Extraktion dieser beiden Fälle zu ermöglichen. Die Genauigkeit wird auf Grund dieser Fakten auf $\pm$ \unit[1]{cm} festgelegt\footnote{Dieser Wert ist eine Annahme und müsste durch eine Fachperson bestätigt werden.}.
 %
 %
 \section{Angrenzende Projekte}
